--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Leading UK BIM Clash Detection Providers for Error-Free Project Delivery</title>
   <meta name="description" content="Find the top UK BIM clash detection providers ensuring accurate design, zero conflicts, and smooth construction. Learn why clash detection is key for error-free project delivery.">
+
+  <!--    Canonical Tag -->
+  <link rel="canonical" href="https://bim-clash-detection-services-provid.vercel.app/" />
+  
+  <!--   Google Search Console -->
+  <meta name="google-site-verification" content="LjrlBg70Og8910mwhltnL4Krs21Qeg_qYaK2IEsnAvc" />
+  
   <style>
     /* Gradient background */
     body {
@@ -242,15 +249,16 @@
   "@type": "Article",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "1233"
+    "@id": "https://bim-clash-detection-services-provid.vercel.app/"
   },
   "headline": "Leading UK BIM Clash Detection Providers for Error-Free Project Delivery",
   "description": "Find the top UK BIM clash detection providers ensuring accurate design, zero conflicts, and smooth construction. Learn why clash detection is key for error-free project delivery.",
-  "image": "1233",
+  "image": "https://bim-clash-detection-services-provid.vercel.app/image/uk-bim-clash-detection-providers.png",
   "datePublished": "2025-08-08",
   "dateModified": "2025-08-08"
 }
 </script>
 
 </body>
+
 </html>
